# chuk-mcp-physics

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  EXAMPLE_PROMPTS.md  Makefile  RAPIER_SERVICE.md  README.md  fly.toml  physics.example.yaml  pyproject.toml  rapier-service-main-fix.patch  test_bouncing_ball.py  test_plane_ground.py
.github/workflows/: deploy-rapier.yml  test.yml
examples/: 00_quick_start.py  01_simple_projectile.py  02_collision_detection.py  03_force_energy_momentum.py  04_r3f_visualization.py  05_rapier_simulation.py  06_bounce_detection.py  07_contact_events.py  08_pendulum.py  09_phase1_complete.py  10_fluid_dynamics.py  11_rotational_dynamics.py  12_oscillations.py  13_circular_motion.py  14_statics.py  15_kinematics_analysis.py  16_roulette_simulation.py  17_viscosity_and_reynolds_number.py  README.md  advanced_projectile_effects.py  sports_projectiles_with_drag.py  tumbling_projectiles.py
rapier-service/: .dockerignore  Cargo.toml  Dockerfile  FLY_REDIS_SETUP.md  Makefile  README.md  fly.toml
rapier-service/src/: main.rs  physics.rs  storage.rs
src/chuk_mcp_physics/: __init__.py  analysis.py  circular_motion.py  collisions.py  config.py  conservation.py  fluid.py  fluid_advanced.py  kinematics.py  models.py  oscillations.py  rotational.py  server.py  statics.py  units.py
src/chuk_mcp_physics/providers/: __init__.py  analytic.py  base.py  factory.py  rapier.py
src/chuk_mcp_physics/tools/: __init__.py  basic.py  circular_motion.py  collisions.py  conservation.py  convert_units.py  fluid.py  kinematics_tools.py  oscillations.py  rotational.py  statics.py
tests/: conftest.py  test_analysis.py  test_analytic.py  test_circular_motion.py  test_collisions.py  test_config.py  test_conservation.py  test_factory.py  test_fluid.py  test_fluid_advanced.py  test_kinematics.py  test_kinematics_coverage.py  test_models.py  test_orientation_drag.py  test_oscillations.py  test_projectile_drag.py  test_projectile_enhancements.py  test_rapier.py  test_rotational.py  test_server.py  test_server_phase2.py  test_simulation.py  test_statics.py  test_tools_basic_complete.py  test_tools_drag_coverage.py  test_tools_fluid_complete.py  test_tools_kinematics_complete.py  test_tools_statics_complete.py  test_units.py  test_validation.py
