[package]
name = "rapier-physics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rapier physics engine
rapier3d = { version = "0.18", features = ["serde-serialize"] }

# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for simulation IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math
nalgebra = "0.32"

# Storage backends
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
